opam-version: "2.0"
synopsis: "The XenServer GPU monitoring daemon"
maintainer: "xen-api@lists.xen.org"
authors: [ "xen-api@lists.xen.org" ]
homepage: "https://github.com/xapi-project/xen-api"
bug-reports: "https://github.com/xapi-project/xen-api/issues"
depends: [
  "base-threads"
  "ounit" {with-test}
  "rresult"
  "rrdd-plugin"
  "xapi-idl"
  "xapi-stdext-pervasives"
  "xapi-stdext-unix"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git://github.com/xapi-project/xen-api"
